--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "mocha -w tests/*.test.js"
+    "test": "mocha tests/*.test.js"
   },
   "author": "erickwendel",
   "license": "ISC",
@@ -12,9 +12,9 @@
     "mocha": "^5.2.0"
   },
   "dependencies": {
+    "hapi": "^17.7.0",
+    "joi": "^14.1.0",
     "mongoose": "^5.3.11",
-    "pg": "^7.4.3",
-    "pg-hstore": "^2.3.2",
     "sequelize": "^4.38.0"
   }
 }
