--- a/package.json
+++ b/package.json
@@ -1,13 +1,17 @@
 {
-  "name": "modulo05-multidatabase",
+  "name": "elite-bank-api",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "node index.js",
     "test": "mocha tests/*.test.js"
   },
   "author": "erickwendel",
   "license": "ISC",
+  "engines": {
+    "node": "10.16.0"
+  },
   "devDependencies": {
     "mocha": "^5.2.0"
   },
