--- a/package.json
+++ b/package.json
@@ -6,15 +6,18 @@
   "scripts": {
     "test": "mocha tests/*.test.js"
   },
-  "author": "erickwendel",
+  "author": "Codevelopers",
   "license": "ISC",
   "devDependencies": {
     "mocha": "^5.2.0"
   },
   "dependencies": {
     "hapi": "^17.7.0",
+    "hapi-swagger": "^10.0.2",
+    "inert": "^5.1.3",
     "joi": "^14.1.0",
     "mongoose": "^5.3.11",
-    "sequelize": "^4.38.0"
+    "sequelize": "^4.38.0",
+    "vision": "^5.4.4"
   }
 }
