--- a/package.json
+++ b/package.json
@@ -13,15 +13,16 @@
     "node": "10.16.0"
   },
   "devDependencies": {
-    "mocha": "^5.2.0"
+    "mocha": "5.2.0"
   },
   "dependencies": {
-    "hapi": "^17.7.0",
-    "hapi-swagger": "^10.0.2",
-    "inert": "^5.1.3",
-    "joi": "^14.1.0",
-    "mongoose": "^5.3.11",
-    "sequelize": "^4.38.0",
-    "vision": "^5.4.4"
+    "hapi": "17.7.0",
+    "hapi-swagger": "9.1.3",
+    "inert": "5.1.3",
+    "joi": "14.1.0",
+    "mongoose": "5.3.11",
+    "sequelize": "4.38.0",
+    "uuid": "3.3.2",
+    "vision": "5.4.4"
   }
 }
