--- a/package.json
+++ b/package.json
@@ -16,8 +16,9 @@
     "mocha": "^5.2.0"
   },
   "dependencies": {
-    "hapi": "^17.7.0",
-    "hapi-swagger": "^10.0.2",
+    "boom": "^7.3.0",
+    "hapi": "^17.8.5",
+    "hapi-swagger": "9.1.3",
     "inert": "^5.1.3",
     "joi": "^14.1.0",
     "mongoose": "^5.3.11",
